--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ rm_file/
 /server/latest_log
 /server/__debug_bin*
 server/uploads/
+/serve/image-build/
 
 *.iml
 web/.pnpm-debug.log
 web/pnpm-lock.yaml
+/server/image-build
